tests/negative/test_cn_asgn_cn_tuple.orb
fnc makeFoo() (i32 i32) {
    sym f:(i32 i32);
    ret f;
};

fnc main() () {
    sym (f1:((i32 i32) cn) (makeFoo));
    sym f2:(i32 i32);
    = f1 f2;
};